attempt to fix issue with steel plate not showing up on ionic demo

--- a/mydieselapp/www/css/collections.css
+++ b/mydieselapp/www/css/collections.css
@@ -10,7 +10,7 @@
     text-align: center;
     font-family: 'Anton', sans-serif;
     font-size: 25px;
-    background-image: url('/img/blackdiamondplate.jpeg');
+    background-image: url('../img/blackdiamondplate.jpeg');
 }
 /* this css is also for search page results */
 .exercise-tbl {
