--- a/mydieselapp/www/css/landing.css
+++ b/mydieselapp/www/css/landing.css
@@ -22,7 +22,7 @@
 	font-size: 25px;
 	padding-top: 6px;
 	padding-bottom: 6px;
-	background-image: url('/img/blackdiamondplate.jpeg');
+	background-image: url('../img/blackdiamondplate.jpeg');
 }
 .landing-btns a:link{
 	text-decoration: none;
