--- a/mydieselapp/www/css/search.css
+++ b/mydieselapp/www/css/search.css
@@ -9,7 +9,7 @@
   text-align: center;
   font-family: 'Anton', sans-serif;
   font-size: 25px;
-  background-image: url('/img/blackdiamondplate.jpeg');
+  background-image: url('../img/blackdiamondplate.jpeg');
 }
 
 .search {
