--- a/mydieselapp/www/css/trainingIndex.css
+++ b/mydieselapp/www/css/trainingIndex.css
@@ -11,7 +11,7 @@
 	text-align: center;
 	font-family: 'Anton', sans-serif;
 	font-size: 25px;
-	background-image: url('/img/blackdiamondplate.jpeg');
+	background-image: url('../img/blackdiamondplate.jpeg');
 }
 
 .training-button a:link{
